<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

        <TextView
            android:padding="10dp"
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0FB1A1"
            android:gravity="center"
            android:text="@string/information_personal"
            android:textColor="#FFC107" />
       <LinearLayout
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="1"
                android:textSize="17dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fullname" />

            <EditText
                android:id="@+id/fullName"
                android:layout_weight="3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hintName"
                android:textSize="17dp" />
        </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="1.3"
            android:textSize="17dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CMND" />

        <EditText
            android:id="@+id/cmd"
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hintCMND"
            android:textSize="17dp" />
    </LinearLayout>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#03A9F4"
        android:gravity="center"
        android:text="@string/qualification"
        android:textColor="#FFEB3B" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <RadioGroup
            android:id="@+id/groupQualification"
            android:gravity="center"
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/academy"
                android:padding="5dp"
                android:layout_marginLeft="15dp"
                android:text="@string/academy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/college"
                android:padding="5dp"
                android:layout_marginLeft="15dp"
                android:text="@string/college"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/univercity"
                android:padding="5dp"
                android:layout_marginLeft="15dp"
                android:text="@string/university"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>
    </LinearLayout>
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#03A9F4"
        android:gravity="center"
        android:text="@string/hobby"
        android:textColor="#FFEB3B" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/magazine"
            android:padding="5dp"
            android:text="@string/read_magazine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <CheckBox
            android:id="@+id/newspaper"
            android:padding="5dp"
            android:text="@string/read_newspaper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <CheckBox
            android:id="@+id/watchtv"
            android:padding="5dp"
            android:text="@string/read_watchTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#03A9F4"
        android:gravity="center"
        android:text="@string/infomation_other"
        android:textColor="#FFEB3B" />
   <EditText
       android:id="@+id/edInfo"
       android:padding="10dp"
       android:hint="@string/hintInfoOther"
       android:layout_width="match_parent"
       android:layout_height="150dp" />
    <Button
        android:id="@+id/btnSendInfo"
        android:text="@string/send_info"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>